[tool.poetry]
name = "hotel-finder"
version = "0.1.0"
description = "An Application to find hotels at the given locations"
authors = ["Ravi Sharma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
