[tool.poetry]
name = "hotel-finder"
version = "0.1.0"
description = "An Application to find hotels at the given locations"
authors = ["Ravi Sharma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.14.0"
requests = "^2.31.0"
dash-extensions = "^1.0.4"
googlemaps = "^4.10.0"
dash-mantine-components = "^0.12.1"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
